--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -13,6 +13,8 @@ author:
     affiliation: a
   - name: Mika Braginsky
     affiliation: a
+  - name: George Kachergis
+    affiliation: a
   - name: Jess Mankewitz
     affiliation: c
   - name: Stephan Meylan
